# EEBO

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
doc/: Doxyfile
doc/theory/: bibtex.bib
doc/theory/graphics/: domain.tex
doc/theory/model_notes/: model.aux  model.bbl  model.blg  model.tex  structure.tex
scripts/: set-env-mpich.sh  travis-install-deps.sh
src/base/: App.cc  App.cpp  App.h  App.hh  App.hpp  EEBO.h  EEBO.hh  FEProblem.h  FEProblem.hh  FEProblem.hpp  Init.cc  Init.cpp  Init.h  Init.hh  Init.hpp  SystemBase.cpp  SystemBase.h  SystemBase.hpp
src/common/: EEBO.hh  EEBOApp.cc  EEBOApp.hh
src/driver/fbc/: fbc.cc  fbc.cpp
src/model/: HeatTransfer.cc  HeatTransfer.cpp  HeatTransfer.h  HeatTransfer.hh  HeatTransfer.hpp
src/sim/: .depend  Makefile  Navier-Stokes-2d.C  Navier_Stokes.tex  example-opt  info  out_001.pvtu  out_001_0.vtu  out_002.pvtu  out_002_0.vtu
src/sim/dampedNewton/: Navier-Stokes-2d.C  example-opt  out_002_0.vtu  out_003.pvtu  out_004.pvtu  out_005.pvtu  out_006.pvtu  out_007.pvtu
src/sim/doc/: Navier_Stokes.aux  Navier_Stokes.bbl  Navier_Stokes.blg  Navier_Stokes.tex  bib.bib  bib.bib.bak
src/sim/noTemp/: Navier-Stokes-2d.C  example-opt  out_001.pvtu  out_001_0.vtu  out_002.pvtu  out_002_0.vtu  out_003.pvtu  out_003_0.vtu  out_004.pvtu  out_004_0.vtu  out_005.pvtu  out_005_0.vtu  out_006.pvtu  out_006_0.vtu  out_007.pvtu  out_007_0.vtu  out_008.pvtu  out_008_0.vtu  out_009.pvtu  out_009_0.vtu  out_010.pvtu  out_010_0.vtu  out_011.pvtu  out_011_0.vtu  out_012.pvtu  out_012_0.vtu  out_013.pvtu  out_013_0.vtu  out_014.pvtu  out_014_0.vtu  out_015.pvtu  out_015_0.vtu
src/sim/noTemp_Schur/: Makefile  Navier-Stokes-2d.C  example-opt
tests/: test_app.cpp  test_driver.cpp  test_eigenproblem.cpp  test_init.cpp  test_init.h  test_main.cpp
tests/data/: CreateAppWithOptionfile.in
